Layout ve index turkcelestirme

--- a/Views/Home/Camp.cshtml
+++ b/Views/Home/Camp.cshtml
@@ -9,7 +9,7 @@
                         Tour Packages
                     </h1>
                     <p class="text-white link-nav">
-                        <a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="packages.html"> Tour Packages</a>
+                        <a href="/">AnaSayfa </a> <span class="lnr lnr-arrow-right"></span> <a href="camp">Kamp Alanları</a>
                     </p>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                 <div class="single-carusel">
                     <div class="thumb relative">
                         <div class="overlay overlay-bg"></div>
-                        <img class="img-fluid" src="img/packages/hot-deal.jpg" alt="">
+                        <img class="img-fluid" src="/img/packages/hot-deal.jpg" alt="">
                     </div>
                     <div class="price-detials">
                         <a href="#" class="price-btn">Starting From <span>$250</span></a>
@@ -62,7 +62,7 @@
                 <div class="single-carusel">
                     <div class="thumb relative">
                         <div class="overlay overlay-bg"></div>
-                        <img class="img-fluid" src="img/packages/hot-deal.jpg" alt="">
+                        <img class="img-fluid" src="/img/packages/hot-deal.jpg" alt="">
                     </div>
                     <div class="price-detials">
                         <a href="#" class="price-btn">Starting From <span>$250</span></a>
