--- a/Views/Home/City.cshtml
+++ b/Views/Home/City.cshtml
@@ -9,7 +9,7 @@
                         Hotels
                     </h1>
                     <p class="text-white link-nav">
-                        <a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="hotels.html"> Hotels</a>
+                        <a href="/">AnaSayfa </a> <span class="lnr lnr-arrow-right"></span> <a href="city"> Şehirler</a>
                     </p>
                 </div>
             </div>
