--- a/Views/Home/Insurance.cshtml
+++ b/Views/Home/Insurance.cshtml
@@ -1,4 +1,4 @@
-@section Banner
+﻿@section Banner
 {
     <section class="about-banner relative">
         <div class="overlay overlay-bg"></div>
@@ -9,7 +9,7 @@
                         Insurance
                     </h1>
                     <p class="text-white link-nav">
-                        <a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="insurance.html"> Insurance</a>
+                        <a href="/">AnaSayfa </a> <span class="lnr lnr-arrow-right"></span> <a href="insurance">Bunları bil</a>
                     </p>
                 </div>
             </div>
