--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -9,7 +9,7 @@
                         Contact Us
                     </h1>
                     <p class="text-white link-nav">
-                        <a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="contact.html"> Contact Us</a>
+                        <a href="/">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="contact"> Contact Us</a>
                     </p>
                 </div>
             </div>
