--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,12 +5,12 @@
         <div class="container">
             <div class="row fullscreen align-items-center justify-content-between">
                 <div class="col-lg-6 col-md-6 banner-left">
-                    <h6 class="text-white">Away from monotonous life</h6>
+                    <h6 class="text-white">Monoton yaşamdan uzaklaşmak için</h6>
                     <h1 class="text-white">Magical Travel</h1>
                     <p class="text-white">
-                        If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.
+                        Kayıp cennetleri keşfetmek, unutulmaz anılar biriktirmek için doğru adreste olduğunuzu biliyor musunuz? Yemyeşil ormanlardan masmavi denizlere, tarihi şehirlerden egzotik adalarına kadar dünyanın her köşesini sizin için seçtik. Macera dolu bir yolculuğa çıkmaya hazır mısınız?
                     </p>
-                    <a href="#" class="primary-btn text-uppercase">Get Started</a>
+                    <a href="camp" class="primary-btn text-uppercase">Keşfetmeye başla!</a>
                 </div>
                 <div class="col-lg-4 col-md-6 banner-right">
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -43,8 +43,8 @@
         <div class="row d-flex justify-content-center">
             <div class="menu-content pb-70 col-lg-8">
                 <div class="title text-center">
-                    <h1 class="mb-10">Popular Destinations</h1>
-                    <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast, day.</p>
+                    <h1 class="mb-10">Popüler Şehirler</h1>
+                    <p>Hepimiz, kalbi genç olanların çağı içinde yaşıyoruz. Gün geçtikçe hızlanan bir hayat.</p>
                 </div>
             </div>
         </div>
@@ -57,8 +57,8 @@
                     </div>
                     <div class="desc">
                         <a href="#" class="price-btn">$150</a>
-                        <h4>Mountain River</h4>
-                        <p>Paraguay</p>
+                        <h4>Dağ şehri</h4>
+                        <p>Bolu</p>
                     </div>
                 </div>
             </div>
@@ -70,8 +70,8 @@
                     </div>
                     <div class="desc">
                         <a href="#" class="price-btn">$250</a>
-                        <h4>Dream City</h4>
-                        <p>Paris</p>
+                        <h4>Rüya Şehir</h4>
+                        <p>İstanbul</p>
                     </div>
                 </div>
             </div>
@@ -83,8 +83,8 @@
                     </div>
                     <div class="desc">
                         <a href="#" class="price-btn">$350</a>
-                        <h4>Cloud Mountain</h4>
-                        <p>Sri Lanka</p>
+                        <h4>Bulutların üzeri</h4>
+                        <p>Trabzon</p>
                     </div>
                 </div>
             </div>
@@ -100,15 +100,15 @@
         <div class="row d-flex justify-content-center">
             <div class="menu-content pb-70 col-lg-8">
                 <div class="title text-center">
-                    <h1 class="mb-10">We Provide Affordable Prices</h1>
-                    <p>Well educated, intellectual people, especially scientists at all times demonstrate considerably.</p>
+                    <h1 class="mb-10">Sizin için seçtiklerimiz</h1>
+                    <p>Sizin için en popüler ve uygun yerleri listeledik! </p>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-6">
                 <div class="single-price">
-                    <h4>Cheap Packages</h4>
+                    <h4>Kamp</h4>
                     <ul class="price-list">
                         <li class="d-flex justify-content-between align-items-center">
                             <span>New York</span>
@@ -137,40 +137,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-6">
                 <div class="single-price">
-                    <h4>Luxury Packages</h4>
-                    <ul class="price-list">
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>New York</span>
-                            <a href="#" class="price-btn">$1500</a>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Maldives</span>
-                            <a href="#" class="price-btn">$1500</a>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Sri Lanka</span>
-                            <a href="#" class="price-btn">$1500</a>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Nepal</span>
-                            <a href="#" class="price-btn">$1500</a>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Thiland</span>
-                            <a href="#" class="price-btn">$1500</a>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            <span>Singapore</span>
-                            <a href="#" class="price-btn">$1500</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="single-price">
-                    <h4>Camping Packages</h4>
+                    <h4>Karavan</h4>
                     <ul class="price-list">
                         <li class="d-flex justify-content-between align-items-center">
                             <span>New York</span>
