Camp,city,contact turkcelestirme

--- a/Views/Home/Camp.cshtml
+++ b/Views/Home/Camp.cshtml
@@ -6,7 +6,7 @@
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="about-content col-lg-12">
                     <h1 class="text-white">
-                        Tour Packages
+                        Kamp ve Karavan
                     </h1>
                     <p class="text-white link-nav">
                         <a href="/">AnaSayfa </a> <span class="lnr lnr-arrow-right"></span> <a href="camp">Kamp Alanları</a>
@@ -22,8 +22,8 @@
         <div class="row d-flex justify-content-center">
             <div class="menu-content pb-70 col-lg-8">
                 <div class="title text-center">
-                    <h1 class="mb-10">Today’s Hot Deals</h1>
-                    <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast, day to.</p>
+                    <h1 class="mb-10">Günün popüler yerleri</h1>
+                    <p>Sizin için en fazla rezervasyon alan yerleri listeledik</p>
                 </div>
             </div>
         </div>
@@ -87,8 +87,10 @@
         <div class="row d-flex justify-content-center">
             <div class="menu-content pb-40 col-lg-8">
                 <div class="title text-center">
-                    <h1 class="mb-10">Popular Destinations</h1>
-                    <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast, day to.</p>
+                    <h1 class="mb-10">
+                        Popüler Destinasyonlar
+                    </h1>
+                    <p>Hepimiz, kalbi genç olanların çağı içinde yaşıyoruz. Gün geçtikçe hızlanan bir hayat.</p>
                 </div>
             </div>
         </div>
