--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,4 +1,4 @@
-@section Banner
+﻿@section Banner
 {
     <section class="relative about-banner">
         <div class="overlay overlay-bg"></div>
@@ -27,7 +27,7 @@
                         <span class="lnr lnr-home"></span>
                     </div>
                     <div class="contact-details">
-                        <h5>Binghamton, New York</h5>
+                        <h5>İstanbul, Türkiye</h5>
                         <p>
                             4343 Hinkle Deegan Lake Road
                         </p>
@@ -56,18 +56,18 @@
                 <form class="form-area contact-form text-right" id="myForm" action="mail.php" method="post">
                     <div class="row">
                         <div class="col-lg-6 form-group">
-                            <input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control" required="" type="text">
+                            <input name="name" placeholder="İsim Soyisim" autocomplete="off" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control" required="" type="text">
 
-                            <input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control" required="" type="email">
+                            <input name="email" placeholder="Eposta adresiniz" autocomplete="off" pattern="[A-Za-z0-9._%+-]+@@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control" required="" type="email">
 
-                            <input name="subject" placeholder="Enter subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter subject'" class="common-input mb-20 form-control" required="" type="text">
+                            <input name="subject" placeholder="Konu" autocomplete="off" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter subject'" class="common-input mb-20 form-control" required="" type="text">
                         </div>
                         <div class="col-lg-6 form-group">
-                            <textarea class="common-textarea form-control" name="message" placeholder="Enter Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Messege'" required=""></textarea>
+                            <textarea class="common-textarea form-control" name="message" autocomplete="off" placeholder="İletmek istedikleriniz" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Messege'" required=""></textarea>
                         </div>
                         <div class="col-lg-12">
                             <div class="alert-msg" style="text-align: left;"></div>
-                            <button class="genric-btn primary" style="float: right;">Send Message</button>
+                            <button class="genric-btn primary" style="float: right;">Mesaj gönder</button>
                         </div>
                     </div>
                 </form>
